--- a/documentation/operators/refcount.html
+++ b/documentation/operators/refcount.html
@@ -220,11 +220,8 @@ Completed</pre></div>
     <pre>
 //from https://github.com/ReactiveX/RxPHP/blob/master/demo/share/share.php
 
-$loop = \React\EventLoop\Factory::create();
-$scheduler  = new \Rx\Scheduler\EventLoopScheduler($loop);
-
 //With Share
-$source = \Rx\Observable::interval(1000, $scheduler)
+$source = \Rx\Observable::interval(1000)
     ->take(2)
     ->doOnNext(function ($x) {
         echo "Side effect\n";
@@ -234,9 +231,6 @@ $published = $source->share();
 
 $published->subscribe($createStdoutObserver('SourceA '));
 $published->subscribe($createStdoutObserver('SourceB '));
-
-$loop->run();
-
 
    </pre>
 </div>
@@ -266,10 +260,7 @@ SourceB Complete!
     <pre>
 //from https://github.com/ReactiveX/RxPHP/blob/master/demo/share/shareValue.php
 
-$loop = \React\EventLoop\Factory::create();
-$scheduler  = new \Rx\Scheduler\EventLoopScheduler($loop);
-
-$source = \Rx\Observable::interval(1000, $scheduler)
+$source = \Rx\Observable::interval(1000)
     ->take(2)
     ->doOnNext(function ($x) {
         echo "Side effect\n";
@@ -279,8 +270,6 @@ $published = $source->shareValue(42);
 
 $published->subscribe($createStdoutObserver('SourceA '));
 $published->subscribe($createStdoutObserver('SourceB '));
-
-$loop->run();
 
    </pre>
 </div>
