--- a/documentation/operators/repeat.html
+++ b/documentation/operators/repeat.html
@@ -339,10 +339,7 @@ Complete!
     <pre>
 //from https://github.com/ReactiveX/RxPHP/blob/master/demo/repeat/repeatWhen.php
 
-$loop      = \React\EventLoop\Factory::create();
-$scheduler = new \Rx\Scheduler\EventLoopScheduler($loop);
-
-$source = Rx\Observable::just(42)
+$source = Rx\Observable::of(42)
     ->repeatWhen(function (\Rx\Observable $notifications) {
         return $notifications
             ->scan(function ($acc, $x) {
@@ -357,9 +354,7 @@ $source = Rx\Observable::just(42)
             });
     });
 
-$subscription = $source->subscribe($createStdoutObserver(), $scheduler);
-
-$loop->run();
+$subscription = $source->subscribe($createStdoutObserver());
 
    </pre>
 </div>
