--- a/documentation/operators/retry.html
+++ b/documentation/operators/retry.html
@@ -294,24 +294,20 @@ subscribing</pre></div>
     <pre>
 //from https://github.com/ReactiveX/RxPHP/blob/master/demo/retry/retry.php
 
-$loop      = \React\EventLoop\Factory::create();
-$scheduler = new \Rx\Scheduler\EventLoopScheduler($loop);
-
 $count = 0;
 
-$observable = Rx\Observable::interval(1000, $scheduler)
+$observable = Rx\Observable::interval(1000)
     ->flatMap(function ($x) use (&$count) {
         if (++$count < 2) {
-            return Rx\Observable::error(new \Exception("Something"));
+            return Rx\Observable::error(new \Exception('Something'));
         }
-        return Rx\Observable::just(42);
+        return Rx\Observable::of(42);
     })
     ->retry(3)
     ->take(1);
 
 $observable->subscribe($stdoutObserver);
 
-$loop->run();
 
    </pre>
 </div>
@@ -335,9 +331,6 @@ Complete!
     <pre>
 //from https://github.com/ReactiveX/RxPHP/blob/master/demo/retry/retryWhen.php
 
-$loop      = new \React\EventLoop\StreamSelectLoop();
-$scheduler = new \Rx\Scheduler\EventLoopScheduler($loop);
-
 $source = Rx\Observable::interval(1000)
     ->map(function ($n) {
         if ($n === 2) {
@@ -345,14 +338,12 @@ $source = Rx\Observable::interval(1000)
         }
         return $n;
     })
-    ->retryWhen(function ($errors) {
+    ->retryWhen(function (\Rx\Observable $errors) {
         return $errors->delay(200);
     })
     ->take(6);
 
-$subscription = $source->subscribe($createStdoutObserver(), $scheduler);
-
-$loop->run();
+$subscription = $source->subscribe($createStdoutObserver());
 
    </pre>
 </div>
