--- a/documentation/operators/subscribe.html
+++ b/documentation/operators/subscribe.html
@@ -320,6 +320,20 @@ Completed</pre></div>
     </p>
   {% endlang_operator %}
 
+  {% lang_operator RxPHP subscribe %}
+<figure class="variant">
+    <figcaption>
+    <p>
+    RxPHP implements this operator as <code>subscribe</code>.
+    </p>
+    <p>
+    
+    </p>
+
+    </figcaption>
+</figure>
+  {% endlang_operator %}
+
   {% lang_operator RxPY BlockingObservable.for_each subscribe %}
     <p>
      <span style="color:#f00">TBD</span>
