--- a/documentation/operators/catch.html
+++ b/documentation/operators/catch.html
@@ -385,11 +385,11 @@ Sequence complete</pre></div>
      </figure>
   {% endlang_operator %}
 
-  {% lang_operator RxPHP catchError %}
+  {% lang_operator RxPHP catch %}
 <figure class="variant">
     <figcaption>
     <p>
-    RxPHP implements this operator as <code>catchError</code>.
+    RxPHP implements this operator as <code>catch</code>.
     </p>
     <p>
     Continues an observable sequence that is terminated by an exception with the next observable sequence.
@@ -397,12 +397,12 @@ Sequence complete</pre></div>
 <h4>Sample Code</h4>
 <div class="code php">
     <pre>
-//from https://github.com/ReactiveX/RxPHP/blob/master/demo/catch/catchError.php
+//from https://github.com/ReactiveX/RxPHP/blob/master/demo/catch/catch.php
 
-$obs2 = Rx\Observable::just(42);
+$obs2 = Rx\Observable::of(42);
 
-$source = \Rx\Observable::error(new Exception("Some error"))
-    ->catchError(function (Exception $e, \Rx\Observable $sourceObs) use ($obs2) {
+$source = \Rx\Observable::error(new Exception('Some error'))
+    ->catch(function (Throwable $e, \Rx\Observable $sourceObs) use ($obs2) {
         return $obs2;
     });
 
