--- a/documentation/operators/concat.html
+++ b/documentation/operators/concat.html
@@ -250,10 +250,10 @@ Sequence complete</pre></div>
 //from https://github.com/ReactiveX/RxPHP/blob/master/demo/concat/concat.php
 
 
-$source1 = \Rx\Observable::just(42);
-$source2 = \Rx\Observable::just(56);
+$source1 = \Rx\Observable::of(42);
+$source2 = \Rx\Observable::of(56);
 
-$source = \Rx\Observable::emptyObservable()->concat($source1)->concat($source2);
+$source = \Rx\Observable::empty()->concat($source1)->concat($source2);
 
 $subscription = $source->subscribe($stdoutObserver);
 
