--- a/documentation/operators/from.html
+++ b/documentation/operators/from.html
@@ -700,7 +700,7 @@ Completed</pre></div>
     </p>
   {% endlang_operator %}
 
-  {% lang_operator RxPHP fromArray fromIterator asObservable %}
+  {% lang_operator RxPHP fromArray fromIterator asObservable fromPromise %}
 <figure class="variant">
     <figcaption>
     <p>
@@ -749,15 +749,15 @@ Complete!
     <pre>
 //from https://github.com/ReactiveX/RxPHP/blob/master/demo/iterator/iterator.php
 
-function gen_one_to_three()
-{
+$generator = function () {
     for ($i = 1; $i <= 3; $i++) {
         yield $i;
     }
-}
 
-$generator = gen_one_to_three();
-$source    = new \Rx\Observable\IteratorObservable($generator);
+    return 4;
+};
+
+$source = Rx\Observable::fromIterator($generator());
 
 $source->subscribe($stdoutObserver);
 
@@ -768,6 +768,7 @@ $source->subscribe($stdoutObserver);
 Next value: 1
 Next value: 2
 Next value: 3
+Next value: 4
 Complete!
     </pre>
 </div>
@@ -796,6 +797,34 @@ $subject->onCompleted();
 $source = $subject->asObservable();
 
 $source->subscribe($stdoutObserver);
+   </pre>
+</div>
+<div class="output">
+    <pre>
+Next value: 42
+Complete!
+    </pre>
+</div>
+    </figcaption>
+</figure><figure class="variant">
+    <figcaption>
+    <p>
+    RxPHP also has an operator <code>fromPromise</code>.
+    </p>
+    <p>
+    Converts a promise into an observable
+    </p>
+<h4>Sample Code</h4>
+<div class="code php">
+    <pre>
+//from https://github.com/ReactiveX/RxPHP/blob/master/demo/promise/fromPromise.php
+
+$promise = \React\Promise\resolve(42);
+
+$source = \Rx\Observable::fromPromise($promise);
+
+$subscription = $source->subscribe($stdoutObserver);
+
    </pre>
 </div>
 <div class="output">
