--- a/documentation/operators/debounce.html
+++ b/documentation/operators/debounce.html
@@ -517,37 +517,32 @@ Completed</pre></div>
     <pre>
 //from https://github.com/ReactiveX/RxPHP/blob/master/demo/throttle/throttle.php
 
-$loop      = Factory::create();
-$scheduler = new EventLoopScheduler($loop);
-
 $times = [
-    ['value' => 0, 'time' => 100],
-    ['value' => 1, 'time' => 600],
-    ['value' => 2, 'time' => 300],
-    ['value' => 3, 'time' => 900],
-    ['value' => 4, 'time' => 200]
+    ['value' => 0, 'time' => 10],
+    ['value' => 1, 'time' => 200],
+    ['value' => 2, 'time' => 400],
+    ['value' => 3, 'time' => 500],
+    ['value' => 4, 'time' => 900]
 ];
 
 // Delay each item by time and project value;
 $source = Observable::fromArray($times)
     ->flatMap(function ($item) {
-        return Observable::just($item['value'])
+        return Observable::of($item['value'])
             ->delay($item['time']);
     })
     ->throttle(300 /* ms */);
 
-$subscription = $source->subscribe($stdoutObserver, $scheduler);
-
-$loop->run();
+$subscription = $source->subscribe($stdoutObserver);
 
    </pre>
 </div>
 <div class="output">
     <pre>
 Next value: 0
-Next value: 2
 Next value: 1
 Next value: 3
+Next value: 4
 Complete!
     </pre>
 </div>
