--- a/documentation/operators/defer.html
+++ b/documentation/operators/defer.html
@@ -530,7 +530,7 @@ Completed</pre></div>
 
 
 $source = \Rx\Observable::defer(function () {
-    return \Rx\Observable::just(42);
+    return \Rx\Observable::of(42);
 });
 
 $subscription = $source->subscribe($stdoutObserver);
