--- a/documentation/operators/flatmap.html
+++ b/documentation/operators/flatmap.html
@@ -847,38 +847,21 @@ Completed</pre></div>
     <pre>
 //from https://github.com/ReactiveX/RxPHP/blob/master/demo/flatMap/flatMap.php
 
-$loop      = React\EventLoop\Factory::create();
-$scheduler = new Rx\Scheduler\EventLoopScheduler($loop);
-
-$observable = Rx\Observable::range(1, 5);
+$observable = Rx\Observable::range(1, 2);
 
 $selectManyObservable = $observable->flatMap(function ($value) {
-    return Rx\Observable::range(1, $value);
+    return Rx\Observable::range($value, 2);
 });
 
-$disposable = $selectManyObservable->subscribe($stdoutObserver, $scheduler);
-
-$loop->run();
-
+$selectManyObservable->subscribe($stdoutObserver);
    </pre>
 </div>
 <div class="output">
     <pre>
 Next value: 1
-Next value: 1
 Next value: 2
-Next value: 1
 Next value: 2
-Next value: 1
 Next value: 3
-Next value: 2
-Next value: 1
-Next value: 3
-Next value: 2
-Next value: 4
-Next value: 3
-Next value: 4
-Next value: 5
 Complete!
     </pre>
 </div>
@@ -894,18 +877,18 @@ Complete!
 <h4>Sample Code</h4>
 <div class="code php">
     <pre>
-//from https://github.com/ReactiveX/RxPHP/blob/master/demo/flatmap/flatMapTo.php
+//from https://github.com/ReactiveX/RxPHP/blob/master/demo/concat/concatMapTo.php
 
-$loop      = React\EventLoop\Factory::create();
-$scheduler = new Rx\Scheduler\EventLoopScheduler($loop);
+$obs = \Rx\Observable::interval(100)
+    ->take(3)
+    ->mapWithIndex(function ($i) {
+        return $i;
+    });
 
-$observable = Rx\Observable::range(1, 5);
+$source = Rx\Observable::range(0, 5)
+    ->concatMapTo($obs);
 
-$selectManyObservable = $observable->flatMapTo(\Rx\Observable::range(0,2));
-
-$disposable = $selectManyObservable->subscribe($stdoutObserver, $scheduler);
-
-$loop->run();
+$subscription = $source->subscribe($stdoutObserver);
 
    </pre>
 </div>
@@ -913,14 +896,19 @@ $loop->run();
     <pre>
 Next value: 0
 Next value: 1
-Next value: 0
-Next value: 1
-Next value: 0
-Next value: 1
-Next value: 0
-Next value: 1
-Next value: 0
-Next value: 1
+Next value: 2
+Next value: 3
+Next value: 4
+Next value: 5
+Next value: 6
+Next value: 7
+Next value: 8
+Next value: 9
+Next value: 10
+Next value: 11
+Next value: 12
+Next value: 13
+Next value: 14
 Complete!
     </pre>
 </div>
@@ -948,17 +936,13 @@ Complete!
     <pre>
 //from https://github.com/ReactiveX/RxPHP/blob/master/demo/flatMap/flatMapLatest.php
 
-$loop      = \React\EventLoop\Factory::create();
-$scheduler = new \Rx\Scheduler\EventLoopScheduler($loop);
-
 $source = \Rx\Observable::range(1, 3)
     ->flatMapLatest(function ($x) {
         return \Rx\Observable::fromArray([$x . 'a', $x . 'b']);
     });
 
-$source->subscribe($stdoutObserver, $scheduler);
+$source->subscribe($stdoutObserver);
 
-$loop->run();
    </pre>
 </div>
 <div class="output">
@@ -984,12 +968,9 @@ Complete!
     <pre>
 //from https://github.com/ReactiveX/RxPHP/blob/master/demo/concat/concatMap.php
 
-$loop      = \React\EventLoop\Factory::create();
-$scheduler = new \Rx\Scheduler\EventLoopScheduler($loop);
-
 $source = Rx\Observable::range(0, 5)
-    ->concatMap(function ($x, $i) use ($scheduler) {
-        return \Rx\Observable::interval(100, $scheduler)
+    ->concatMap(function ($x, $i) {
+        return \Rx\Observable::interval(100)
             ->take($x)
             ->map(function () use ($i) {
                 return $i;
@@ -997,8 +978,6 @@ $source = Rx\Observable::range(0, 5)
     });
 
 $subscription = $source->subscribe($stdoutObserver);
-
-$loop->run();
 
    </pre>
 </div>
@@ -1031,10 +1010,7 @@ Complete!
     <pre>
 //from https://github.com/ReactiveX/RxPHP/blob/master/demo/concat/concatMapTo.php
 
-$loop      = \React\EventLoop\Factory::create();
-$scheduler = new \Rx\Scheduler\EventLoopScheduler($loop);
-
-$obs = \Rx\Observable::interval(100, $scheduler)
+$obs = \Rx\Observable::interval(100)
     ->take(3)
     ->mapWithIndex(function ($i) {
         return $i;
@@ -1044,8 +1020,6 @@ $source = Rx\Observable::range(0, 5)
     ->concatMapTo($obs);
 
 $subscription = $source->subscribe($stdoutObserver);
-
-$loop->run();
 
    </pre>
 </div>
