--- a/documentation/operators/skipuntil.html
+++ b/documentation/operators/skipuntil.html
@@ -408,16 +408,11 @@ Completed</pre></div>
     <pre>
 //from https://github.com/ReactiveX/RxPHP/blob/master/demo/skip/skipUntil.php
 
-$loop      = \React\EventLoop\Factory::create();
-$scheduler = new \Rx\Scheduler\EventLoopScheduler($loop);
-
 $observable = Rx\Observable::interval(1000)
     ->skipUntil(\Rx\Observable::timer(5000))
     ->take(3);
 
-$observable->subscribe($stdoutObserver, $scheduler);
-
-$loop->run();
+$observable->subscribe($stdoutObserver);
 
    </pre>
 </div>
