--- a/languages.html
+++ b/languages.html
@@ -126,12 +126,14 @@
 <li>Lua: <a href="https://github.com/bjornbytes/RxLua">RxLua</a></li>
 <li>Ruby: <a href="https://github.com/Reactive-Extensions/Rx.rb">Rx.rb</a></li>
 <li>Python: <a href="https://github.com/ReactiveX/RxPY">RxPY</a></li>
+<li>Go: <a href="https://github.com/ReactiveX/RxGo">RxGo</a></li>
 <li>Groovy: <a href="https://github.com/ReactiveX/RxGroovy">RxGroovy</a></li>
 <li>JRuby: <a href="https://github.com/ReactiveX/RxJRuby">RxJRuby</a></li>
 <li>Kotlin: <a href="https://github.com/ReactiveX/RxKotlin">RxKotlin</a></li>
 <li>Swift: <a href="https://github.com/kzaher/RxSwift">RxSwift</a></li>
 <li>PHP: <a href="https://github.com/ReactiveX/RxPHP">RxPHP</a></li>
 <li>Elixir: <a href="https://github.com/alfert/reaxive">reaxive</a></li>
+<li>Dart: <a href="https://github.com/ReactiveX/rxdart">RxDart</a></li>
 </ul>
 
 <h2 id="reactivex-for-platforms-and-frameworks">ReactiveX for platforms and frameworks</h2>
