--- a/documentation/operators/amb.html
+++ b/documentation/operators/amb.html
@@ -418,9 +418,6 @@ Completed</pre></div></figcaption>
     <pre>
 //from https://github.com/ReactiveX/RxPHP/blob/master/demo/race/race.php
 
-$loop      = \React\EventLoop\Factory::create();
-$scheduler = new \Rx\Scheduler\EventLoopScheduler($loop);
-
 $source = Rx\Observable::race(
     [
         Rx\Observable::timer(500)->map(function () {
@@ -432,9 +429,7 @@ $source = Rx\Observable::race(
     ]
 );
 
-$source->subscribe($stdoutObserver, $scheduler);
-
-$loop->run();
+$source->subscribe($stdoutObserver);
 
    </pre>
 </div>
