--- a/documentation/operators/combinelatest.html
+++ b/documentation/operators/combinelatest.html
@@ -481,9 +481,6 @@ Completed</pre></div>
     <pre>
 //from https://github.com/ReactiveX/RxPHP/blob/master/demo/combineLatest/combineLatest.php
 
-$loop      = \React\EventLoop\Factory::create();
-$scheduler = new \Rx\Scheduler\EventLoopScheduler($loop);
-
 /* Have staggering intervals */
 $source1 = \Rx\Observable::interval(100);
 $source2 = \Rx\Observable::interval(120);
@@ -492,9 +489,7 @@ $source = $source1->combineLatest([$source2], function ($value1, $value2) {
     return "First: {$value1}, Second: {$value2}";
 })->take(4);
 
-$subscription = $source->subscribe($stdoutObserver, $scheduler);
-
-$loop->run();
+$subscription = $source->subscribe($stdoutObserver);
 
    </pre>
 </div>
