--- a/documentation/operators/delay.html
+++ b/documentation/operators/delay.html
@@ -641,19 +641,13 @@ Completed</pre></div></figcaption>
     <pre>
 //from https://github.com/ReactiveX/RxPHP/blob/master/demo/delay/delay.php
 
-$loop = new \React\EventLoop\StreamSelectLoop();
-
-$scheduler  = new \Rx\Scheduler\EventLoopScheduler($loop);
-
-\Rx\Observable::interval(1000, $scheduler)
+\Rx\Observable::interval(1000)
     ->doOnNext(function ($x) {
-        echo "Side effect: " . $x . "\n";
+        echo 'Side effect: ' . $x . "\n";
     })
     ->delay(500)
     ->take(5)
-    ->subscribe($createStdoutObserver(), $scheduler);
-
-$loop->run();
+    ->subscribe($createStdoutObserver());
 
    </pre>
 </div>
