--- a/documentation/operators/just.html
+++ b/documentation/operators/just.html
@@ -423,7 +423,7 @@ Completed</pre></div>
         <div class="panel-heading" role="tab" id="headingRxPHP">
           <h4 class="panel-title">
             <a data-toggle="collapse" data-parent="#accordion" href="#collapseRxPHP" aria-expanded="true" aria-controls="collapseRxPHP">
-              RxPHP <code>just</code>
+              RxPHP <code>of</code>
             </a>
           </h4>
         </div>
@@ -433,7 +433,7 @@ Completed</pre></div>
 <figure class="variant">
     <figcaption>
     <p>
-    RxPHP implements this operator as <code>just</code>.
+    RxPHP implements this operator as <code>of</code>.
     </p>
     <p>
     Returns an observable sequence that contains a single element.
@@ -441,10 +441,10 @@ Completed</pre></div>
 <h4>Sample Code</h4>
 <div class="code php">
     <pre>
-//from https://github.com/ReactiveX/RxPHP/blob/master/demo/just/just.php
+//from https://github.com/ReactiveX/RxPHP/blob/master/demo/of/of.php
 
 
-$source =  \Rx\Observable::just(42);
+$source =  \Rx\Observable::of(42);
 
 $subscription = $source->subscribe($stdoutObserver);
 
