--- a/documentation/operators/merge.html
+++ b/documentation/operators/merge.html
@@ -774,18 +774,13 @@ Error: Error: whoops!</pre></div>
     <pre>
 //from https://github.com/ReactiveX/RxPHP/blob/master/demo/merge/merge.php
 
-$loop      = React\EventLoop\Factory::create();
-$scheduler = new Rx\Scheduler\EventLoopScheduler($loop);
-
-$observable       = Rx\Observable::just(42)->repeat();
-$otherObservable  = Rx\Observable::just(21)->repeat();
+$observable       = Rx\Observable::of(42)->repeat();
+$otherObservable  = Rx\Observable::of(21)->repeat();
 $mergedObservable = $observable
     ->merge($otherObservable)
     ->take(10);
 
-$disposable = $mergedObservable->subscribe($stdoutObserver, $scheduler);
-
-$loop->run();
+$disposable = $mergedObservable->subscribe($stdoutObserver);
 
    </pre>
 </div>
@@ -818,19 +813,14 @@ Complete!
     <pre>
 //from https://github.com/ReactiveX/RxPHP/blob/master/demo/merge/merge-all.php
 
-$loop      = React\EventLoop\Factory::create();
-$scheduler = new Rx\Scheduler\EventLoopScheduler($loop);
-
 $sources = Rx\Observable::range(0, 3)
     ->map(function ($x) {
         return Rx\Observable::range($x, 3);
     });
 
-$merged = \Rx\Observable::mergeAll($sources);
+$merged = $sources->mergeAll();
 
-$disposable = $merged->subscribe($stdoutObserver, $scheduler);
-
-$loop->run();
+$disposable = $merged->subscribe($stdoutObserver);
 
    </pre>
 </div>
