--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
         <a href="http://www.oovoo.com" class="frontpage-logo oovoo-logo"></a>
         <a href="http://www.couchbase.com/" class="frontpage-logo couchbase-logo"></a>
         <a href="http://www.futurice.com" class="frontpage-logo futurice-logo"></a>
-        <a href="https://www.welbe.com/" class="frontpage-logo welbe-logo"></a>
+        <a href="http://www.octanner.com/" class="frontpage-logo octanner-logo"></a>
         <a href="https://www.airbnb.com/" class="frontpage-logo airbnb-logo"></a>
       </div>
     </div>
